# nhs-ei.website

./: .codeclimate.yaml  .codeclimate.yml  .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  gulpfile.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements.importer.txt  vscode.txt
.github/workflows/: codeql.yml  coverage.yml  deployment.yml  terraform-ci.yml  test.yml
cms/: urls.py
cms/atlascasestudies/: apps.py  models.py
cms/blogs/: apps.py  models.py  tests.py
cms/browse/: apps.py  tests.py  urls.py  views.py
cms/categories/: apps.py  blocks.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
cms/changelog/: apps.py  models.py
cms/core/: acf_blocks.py  admin_extras.py  apps.py  blocks.py  context_processors.py  models.py  tests.py
cms/home/: models.py  tests.py
cms/pages/: apps.py  mixins.py  models.py  tests.py
cms/posts/: apps.py  models.py  tests.py
cms/publications/: apps.py  blocks.py  models.py  tests.py  views.py
cms/search/: tests.py  views.py
cms/settings/: base.py  dev.py  production.py
cms/templates/: 404.html  base.html
deployment/: .terraform.lock.hcl  README.md  cdn.tf  data.tf  kubernetes-cluster.tf  kubernetes-cron-jobs.tf  kubernetes-service-elasticsearch.tf  kubernetes-service-ingress-load-balancer.tf  kubernetes-service-scrapy.tf  kubernetes-service-web.tf  locals.tf  logs.tf  outputs.tf  postgresql.tf  providers.tf  resource-groups.tf  storage-account.tf  storage-container-web-media-files.tf  terraform.tfvars.example  variables.tf  versions.tf  virtual-network.tf
docs/: application.md  importer_app.md  release_process.md
fixtures/: document_container.json  loadsa-pages.json  menu-fixtures.json  publication_types.README.txt  publication_types.json  testdata.json
importer/: ancestry.py  category_map.py  documents_list_builder.py  httpcache.py  import_atlas_case_studies.py  import_blogs.py  import_categories.py  import_media_files.py  import_pages.py  import_posts.py  import_publication_types.py  import_publications.py  import_regions.py  import_settings.py  importer_cls.py  make_homepage.py  menu_structure.py  menu_structure_creator.py  postimport.py  preserve.py  richtextbuilder.py  update.py  utils.py  views.py  websites.py
script/: bash  bootstrap  dumpdb  importer  migrate  staging  test
(+216 files in other folders)
