[tool.poetry]
name = "nhs-ei.website"
version = "2021-06-14"
description = "The NHSE&I website"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.9"
python-dateutil = "^2.8.1"
lxml = "^4.6.3"
Django = ">=3.1,<3.2"
wagtail = ">=2.11"
wagtail-nhsuk-frontend = "^0.8.0"
django-environ = "^0.4.5"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
elasticsearch = "^7.13.1"
django-storages = {extras = ["azure"], version = "^1.11.1"}
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
