[tool.poetry]
name = "nhs-ei.website"
version = "2021-06-14"
description = "The NHSE&I website"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<=3.9.7"
python-dateutil = "^2.8.1"
lxml = "^4.6.5"
Django = "^3.2"
wagtail = "^2.14.1"
# Before updating wagtail-nhsuk-frontend, check to see if the npm package nhs-frontend also needs updating.
wagtail-nhsuk-frontend = "~1.1.0"
django-environ = "^0.4.5"
whitenoise = {extras = ["brotli"], version = "^5.2.0"}
elasticsearch = "^7.13.1"
django-storages = {version = "^1.12.3", extras = ["azure"]}
psycopg2 = "^2.8.6"
django-extensions = "^3.1.3"
django-basic-auth-ip-whitelist = "^0.3.4"
cryptography = "3.4.7"
wagtailmenus="^3.0.2"

[tool.poetry.dev-dependencies]
requests-cache = "^0.6.4"
coverage = "^6.3.1"
selenium = "^4.1.3"
Faker = "^13.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
